app-llm/k8s/02-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-app-deployment
  namespace: app-dev
  labels:
    app: llm-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: llm-app
  template:
    metadata:
      labels:
        app: llm-app
      # ================================================== #
      # ANOTAÇÕES DO PROMETHEUS                            #
      # ================================================== #
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '5000'
        prometheus.io/path: '/metrics'
    spec:
      containers:
        - name: llm-app-container
          # Substitua pela sua imagem de contêiner
          image: blackstile/app-llm:291becf
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
