app-llm/k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-app-service
  namespace: app-dev
spec:
  selector:
    app: llm-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
